--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-    <audio controls preload autoplay hidden>
-        <source src="./Music/y2mate.com - Axel  Te Voy A Amar.mp3" type="audio/mp3">
-        Tu navegador no soporta audio HTML5.
-    </audio>
+    <audio autoplay>
+        <source src="Music/y2mate.com - Axel  Te Voy A Amar.mp3" type="audio/mpeg">
+        Tu navegador no soporta la reproducción de audio.
+      </audio>
     <div class="contenedor">
         <img src="./img/UltimoFinal2.png" class="primero">
         <a class="centrado mi-boton borde box" href="https://goo.gl/maps/7nnp7J7wnzj5sbRu9"
