--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-   <button onclick="playAudio()">Reproducir</button>
+   <button onclick="playAudio()" class="centrado mi-boton borde box repro">Reproducir</button> 
 
     <audio id="myAudio">
         <source src="Music/y2mate.com - Axel  Te Voy A Amar.mp3" type="audio/mpeg">
