--- a/Regalo.html
+++ b/Regalo.html
@@ -7,12 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Akshar&family=Beau+Rivage&display=swap" rel="stylesheet">
    
-    <title>Document</title>
+    <title>Regalos</title>
 </head>
 
 <body>
     <div class="contenedor">
         <img src="./img/Regalo.png" class="primero2 img1">
+
+
         <a class="centrado mi-boton borde box" href="./index.html"
         style="margin-top:225px; margin-left: 0px; height: 50px;">
         <span>
